# KanjiTools

./: .gitmodules  README.md
doc/: ClassDiagramm.xmi
src/: CMakeLists.txt  KanjiTools.pro  ada_list.h  ada_safe_list.cpp  ada_safe_list.h  basetest.cpp  basetest.h  common.h  connector_wraper.h  connector_wrapper.cpp  core.cpp  core.h  d301.h  d302.h  d303.h  d304.h  d305.h  d3xx.h  db_connection.cpp  db_connection.h  exampletest1.cpp  exampletest1.h  kanji_module.cpp  kanji_module.h  kanjidialog.cpp  kanjidialog.h  kanjidialog.ui  kanjiencorehandler.cpp  kanjiencorehandler.h  kanjitesthandler.cpp  kanjitesthandler.h  kanjitoolswindow.cpp  kanjitoolswindow.h  kanjitoolswindow.ui  kunyoumitest1.cpp  kunyoumitest1.h  kunyoumitest2.cpp  kunyoumitest2.h  logindialog.cpp  logindialog.h  (+21 more)
src/tests/: Qt_unit_test_test.pro  tst_qt_unit_test_testtest.cpp
